test/type_inference/negative/type_args7.impala
fn main(f: fn[A,B]()->B) -> () {
    let x:int = f();
}

