test/type_inference/negative/type_args7.output
type_args7.impala:2 col 17 - 19: error: could not find instance for type variable 'A' of function 'f'
